--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "watercoolerbend",
   "version": "1.0.0",
-    "engines": {
-    "node": "12.18.2",
-    "npm": "7.5.2"
-  },
   "description": "",
   "main": "server.js",
   "scripts": {
+    "build": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
