--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "watercoolerbend",
   "version": "1.0.0",
     "engines": {
-    "node": "12.18.2"
+    "node": "12.18.2",
+    "npm": "7.5.2"
   },
   "description": "",
   "main": "server.js",
