--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/Brandonmaz/waterCoolerBEnd#readme",
   "dependencies": {
+    "@auth0/auth0-react": "^1.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.5.1"
   }
